fix: AI question evaluation error